--- a/HTML/css/style.css
+++ b/HTML/css/style.css
@@ -1,47 +1,18 @@
-        * {
-            margin: 0px;
-            padding: 0px;
-        }
-        
-        form {
-            width: 50%;
-            margin-left: 25%;
-        }
-        
-        h1 {
-            margin-left: 10%;
-            font-size: 23px;
-        }
-        
-        label {
-            display: inline-block;  
-            clear: left;
-            width: 250px;
-            text-align: right;
-            font-size: 17px;
-        }
-		
-		.ind2 {
-			font-size: 17px;
-		}
-        
-        .nradio {
-            float: right;
-        }
-        
-        .rradio {
-            float: right;
-        }
-        
-        .cradio {
-            float: right;
-            margin-right: 130px;
-        }
+.form-select label {
+    font-size: 15.5px;
+}
 
-        .bsalvar {
-            margin-left: 40%;
-        }
+.top-nav {
+    margin-bottom: 80px;
+    background-color: #A1141C;
+}
 
-        .benviar {
-            margin-left: 40%;
-        }
+#titulo-pag {
+    margin-left: 12px;
+    font-size: 27px;
+}
+
+#btnsalvarid {
+    margin-left: 42%;
+    margin-bottom: 50px;
+}
