--- a/HTML/css/style.css
+++ b/HTML/css/style.css
@@ -12,11 +12,6 @@
     font-size: 27px;
 }
 
-#btnsalvarid {
-    margin-left: 42%;
-    margin-bottom: 50px;
-}
-
 #sexo {
     margin-top: 2px;
     text-indent: 85px;
@@ -27,4 +22,22 @@
     margin-top: 2px;
     text-indent: 89px;
     font-size: 16px;
+}
+
+#btnvertodos {
+    margin-bottom: 50px;
+}
+
+#btnsalvarid {
+    margin-left: 27%;   
+    margin-bottom: 50px;
+}
+
+#tabelaCadastros th {
+    background-color:  #FF5050;
+    border: 1px solid black;
+}
+
+#tabelaCadastros td {
+    border: 1px solid black;
 }
